--- a/ignite/templates/component/NAME.tsx.ejs
+++ b/ignite/templates/component/NAME.tsx.ejs
@@ -1,36 +1,34 @@
-import * as React from "react"
-import { StyleProp, TextStyle, View, ViewStyle } from "react-native"
+import React, { useState } from "react"
 import { observer } from "mobx-react-lite"
 import { color, typography } from "../../theme"
-import { Text } from "../text/text"
+import { perfectHeight, perfectWidth } from "../../utils/commonFunctions"
+import styled from "styled-components/native"
+import Typography from "../Typography"
 
-const CONTAINER: ViewStyle = {
-  justifyContent: "center",
-}
-
-const TEXT: TextStyle = {
-  fontFamily: typography.primary,
-  fontSize: 14,
-  color: color.primary,
-}
 
 export interface <%= props.pascalCaseName %>Props {
   /**
    * An optional style override useful for padding & margin.
    */
-  style?: StyleProp<ViewStyle>
+  title: string
 }
 
 /**
  * Describe your component here
  */
-export const <%= props.pascalCaseName %> = observer(function <%= props.pascalCaseName %>(props: <%= props.pascalCaseName %>Props) {
-  const { style } = props
-  const styles = Object.assign({}, CONTAINER, style)
-
+ export const <%= props.pascalCaseName %> = observer(function <%= props.pascalCaseName %>(props: <%= props.pascalCaseName %>Props) {
+  const { title } = props
+  const [first, setFirst] = useState(false)
   return (
-    <View style={styles}>
-      <Text style={TEXT}>Hello</Text>
-    </View>
+    <MainContainer>
+      <Typography text={title} />
+    </MainContainer>
   )
 })
+
+
+const MainContainer = styled.View`
+  width: 100%;
+  height: ${perfectHeight(10)}px;
+  background-color: ${color.palette.angry};
+`
