--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -3,9 +3,14 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
-        
+
         <!-- Why this is here: https://github.com/facebook/react-native/pull/29452 -->
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     </style>
-
+    
+    <!-- Adds the splash screen definition -->
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:statusBarColor">@color/splashscreen_bg</item>
+        <item name="android:background">@drawable/background_splash</item>
+    </style>
 </resources>
